--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 #image {
-    max-width: 40%;
-    max-height: 40%;
+    max-width: 100%;
+    max-height: 100%;
     align-self: center;
+    display: block;
 }
 
 #main {
